--- a/media/css/blog.css
+++ b/media/css/blog.css
@@ -75,7 +75,7 @@
   display: block;
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
-  border-color: #e0e0e0;
+  border-color: #dddddd;
   -moz-border-image: url(../images/noiseGreyDark.png) 2 0 0 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 2 0 0 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 2 0 0 0 repeat repeat;
