--- a/media/css/footer.css
+++ b/media/css/footer.css
@@ -48,7 +48,7 @@ ul.bottomNav li a {
 }
 /* line 38, ../scss/footer.scss */
 ul.bottomNav li a:hover {
-  background: url(../images/noiseBlack.png) repeat left center;
+  background: url(../images/noiseBlack.png) repeat left center #3b3b3b;
 }
 /* line 43, ../scss/footer.scss */
 ul.bottomNav li.selected a {
