--- a/media/css/posts.css
+++ b/media/css/posts.css
@@ -34,5 +34,105 @@
 }
 /* line 33, ../scss/posts.scss */
 .createThread #postTitle {
-  width: 621px;
+  width: 100%;
+}
+
+/* line 41, ../scss/posts.scss */
+.postFlexWrapper {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+/* line 44, ../scss/posts.scss */
+.postFlexWrapper textarea {
+  -webkit-box-flex: 5;
+  -moz-box-flex: 5;
+  -webkit-flex: 5;
+  -ms-flex: 5;
+  flex: 5;
+}
+/* line 47, ../scss/posts.scss */
+.postFlexWrapper .bbcode {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+/* line 54, ../scss/posts.scss */
+#postContent {
+  width: 688px;
+}
+
+/* line 59, ../scss/posts.scss */
+.createPost {
+  display: inline-block;
+}
+
+/* line 63, ../scss/posts.scss */
+.page-thread .createPost {
+  margin: 0 -30px;
+}
+/* line 66, ../scss/posts.scss */
+.page-thread .createPost #postContent {
+  width: 748px;
+}
+
+/* line 73, ../scss/posts.scss */
+.bbcode {
+  width: 150px;
+  display: inline-block;
+  background: url(../images/noiseGreyDark.png) repeat left center #dddddd;
+  padding: 15px;
+}
+/* line 79, ../scss/posts.scss */
+.bbcode h3 {
+  font-family: "Helvetica Condensed Bold", helvetica;
+  font-size: 1.25em;
+  color: #5c5c5c;
+  margin: 0;
+  padding: 0 0 0.5em 0;
+}
+/* line 87, ../scss/posts.scss */
+.bbcode ul {
+  display: inline-block;
+  margin: 0 0 1em 0;
+  padding: 0;
+}
+/* line 93, ../scss/posts.scss */
+.bbcode ul li {
+  display: inline-block;
+  margin: 4px 2px;
+}
+/* line 97, ../scss/posts.scss */
+.bbcode ul li a {
+  background: url(../images/noiseOffWhite.png) repeat left center #f9f9f9;
+  border-style: solid;
+  border-color: #e9e9e9;
+  -moz-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  -webkit-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  -webkit-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  -o-border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  border-image: url(../images/noiseGrey.png) 0 0 2 0 repeat repeat;
+  border-width: 0px 0px 2px 0px;
+}
+/* line 101, ../scss/posts.scss */
+.bbcode ul li a:hover {
+  background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
+}
+/* line 104, ../scss/posts.scss */
+.bbcode ul li a:active {
+  background: url(../images/noiseBlue.png) repeat left center #25bfff;
+}
+/* line 110, ../scss/posts.scss */
+.bbcode ul li a:before {
+  width: 20px;
+  height: 20px;
+}
+/* line 117, ../scss/posts.scss */
+.bbcode input[type="submit"] {
+  width: 100%;
 }
