--- a/media/scss/_custom.scss
+++ b/media/scss/_custom.scss
@@ -24,31 +24,32 @@ $graey: #aaa;
   @if $color == BlackNav {
     @return #0e0e0e;
   }
-  @if $color == Black {
+  @if $color == "Black" {
     @return #3b3b3b;
   }
   @if $color == BlackLight {
     @return #636363;
   }
-  @if $color == Blue {
+  @if $color == "Blue" {
     @return #25bfff;
   }
   @if $color == BlueDark {
     @return #5b8ec8;
   }
-  @if $color == Green {
+  @if $color == "Green" {
     @return #a6d95d;
   }
-  @if $color == Grey {
+  @if $color == GreyDark {
+    @return #ddd;
+  }
+  @if $color == "Grey" {
     @return #e9e9e9;
   }
-  @if $color == GreyDark {
-    @return #e0e0e0;
-  }
+
   @if $color == GreyMedium {
     @return #f3f3f3;
   }
-  @if $color == Beige {
+  @if $color == "Beige" {
     @return #f1e8b9;
   }
   @if $color == BeigeLight {
@@ -57,7 +58,7 @@ $graey: #aaa;
   @if $color == OffWhite {
     @return #f9f9f9;
   }
-  @if $color == White {
+  @if $color == "White" {
     @return #fff;
   }
   @return null
@@ -166,4 +167,24 @@ $graey: #aaa;
 //    -webkit-transform: scale(2);
 //  }
 //}
+
+@mixin flexbox() {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
+@mixin flex($values) {
+  -webkit-box-flex: $values;
+  -moz-box-flex:  $values;
+  -webkit-flex:  $values;
+  -ms-flex:  $values;
+  flex:  $values;
+}
+
+
+
+
 
