--- a/media/css/main.css
+++ b/media/css/main.css
@@ -361,9 +361,18 @@ ul.pageNav li.curPage span {
 /* line 367, ../scss/main.scss */
 .tinyImage.expanded {
   max-width: none;
+  position: relative;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  transform: translate(-50%);
+  z-index: 3;
+  margin-left: -64px;
 }
 
-/* line 372, ../scss/main.scss */
+/* line 378, ../scss/main.scss */
 .missing42 {
   width: 42px;
   height: 42px;
@@ -371,7 +380,7 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==") no-repeat;
 }
 
-/* line 379, ../scss/main.scss */
+/* line 385, ../scss/main.scss */
 .missing52 {
   width: 42px;
   height: 42px;
@@ -379,22 +388,22 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0AQMAAAD/tomoAAAABlBMVEX4APgAAAAfdBzzAAAAKUlEQVR4Xt3PQQkAAAjAwIEBjGR1IxlAUEvoQxjce6DlUrHmZAlXfvtpTQiymQ2xdWAAAAAASUVORK5CYII=") no-repeat;
 }
 
-/* line 388, ../scss/main.scss */
+/* line 394, ../scss/main.scss */
 .modButton.active {
   background: url(../images/noiseBlue.png) repeat left center #25bfff;
   z-index: 1000;
 }
 
-/* line 395, ../scss/main.scss */
+/* line 401, ../scss/main.scss */
 .modDropdown {
   display: inline-block;
   position: relative;
 }
-/* line 399, ../scss/main.scss */
+/* line 405, ../scss/main.scss */
 .modDropdown:hover {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
 }
-/* line 420, ../scss/main.scss */
+/* line 426, ../scss/main.scss */
 .modDropdown ul {
   display: none;
   position: absolute;
@@ -407,7 +416,7 @@ ul.pageNav li.curPage span {
   text-align: left;
   background: #222;
 }
-/* line 434, ../scss/main.scss */
+/* line 440, ../scss/main.scss */
 .modDropdown ul li a {
   color: #fff;
   display: block;
@@ -416,12 +425,12 @@ ul.pageNav li.curPage span {
   background: url(../images/noiseBlack.png) repeat left center #3b3b3b;
   line-height: 32px;
 }
-/* line 442, ../scss/main.scss */
+/* line 448, ../scss/main.scss */
 .modDropdown ul li a:hover {
   background: url(../images/noiseBlue.png) repeat left center #25bfff;
   text-decoration: none;
 }
-/* line 448, ../scss/main.scss */
+/* line 454, ../scss/main.scss */
 .modDropdown ul li.userActions {
   padding: 0 16px;
   line-height: 32px;
@@ -429,19 +438,19 @@ ul.pageNav li.curPage span {
   font-weight: bold;
   white-space: nowrap;
 }
-/* line 458, ../scss/main.scss */
+/* line 464, ../scss/main.scss */
 .modDropdown ul.mod-thread a {
   padding: 0 0.5em 0 0;
 }
 
 @-moz-keyframes spin {
-  /* line 467, ../scss/main.scss */
+  /* line 473, ../scss/main.scss */
   from {
     -moz-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 470, ../scss/main.scss */
+  /* line 476, ../scss/main.scss */
   to {
     -moz-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -449,13 +458,13 @@ ul.pageNav li.curPage span {
 }
 
 @-webkit-keyframes spin {
-  /* line 467, ../scss/main.scss */
+  /* line 473, ../scss/main.scss */
   from {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 470, ../scss/main.scss */
+  /* line 476, ../scss/main.scss */
   to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -463,13 +472,13 @@ ul.pageNav li.curPage span {
 }
 
 @-o-keyframes spin {
-  /* line 467, ../scss/main.scss */
+  /* line 473, ../scss/main.scss */
   from {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 470, ../scss/main.scss */
+  /* line 476, ../scss/main.scss */
   to {
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -477,13 +486,13 @@ ul.pageNav li.curPage span {
 }
 
 @-ms-keyframes spin {
-  /* line 467, ../scss/main.scss */
+  /* line 473, ../scss/main.scss */
   from {
     -ms-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 470, ../scss/main.scss */
+  /* line 476, ../scss/main.scss */
   to {
     -ms-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -491,18 +500,18 @@ ul.pageNav li.curPage span {
 }
 
 @keyframes spin {
-  /* line 467, ../scss/main.scss */
+  /* line 473, ../scss/main.scss */
   from {
     transform: rotate(0deg);
   }
 
-  /* line 470, ../scss/main.scss */
+  /* line 476, ../scss/main.scss */
   to {
     transform: rotate(360deg);
   }
 }
 
-/* line 475, ../scss/main.scss */
+/* line 481, ../scss/main.scss */
 .popupContainer {
   text-align: center;
   position: fixed;
@@ -515,7 +524,7 @@ ul.pageNav li.curPage span {
   z-index: 9998;
 }
 
-/* line 487, ../scss/main.scss */
+/* line 493, ../scss/main.scss */
 .popup {
   padding: 1em;
   width: 80%;
@@ -527,34 +536,34 @@ ul.pageNav li.curPage span {
   background: #eee;
 }
 
-/* line 498, ../scss/main.scss */
+/* line 504, ../scss/main.scss */
 .popupCloseLink {
   font-size: 0.75em;
 }
-/* line 501, ../scss/main.scss */
+/* line 507, ../scss/main.scss */
 .popupCloseLink:before {
   margin-top: 2em;
   content: '\a';
   display: block;
 }
 
-/* line 508, ../scss/main.scss */
+/* line 514, ../scss/main.scss */
 table {
   width: 100%;
 }
 
-/* line 516, ../scss/main.scss */
+/* line 522, ../scss/main.scss */
 a[target="_blank"]:after {
   content: " " url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAD1BMVEX///////////////////+Rd1MVAAAABHRSTlMAaeRqY+AomwAAADNJREFUeF4lxIEJACAMBLErdACRjuIAX/n9Z7IghEDYhlwkcGe7Z+Xac4cLnVKjkOCzLR6tNQaTLNDT1wAAAABJRU5ErkJggg==");
   white-space: pre;
 }
 
-/* line 522, ../scss/main.scss */
+/* line 528, ../scss/main.scss */
 a.sprite[target="_blank"]:after {
   display: none;
 }
 
-/* line 526, ../scss/main.scss */
+/* line 532, ../scss/main.scss */
 .login {
   width: 154px;
   height: 23px;
@@ -565,7 +574,7 @@ a.sprite[target="_blank"]:after {
   color: transparent;
 }
 
-/* line 536, ../scss/main.scss */
+/* line 542, ../scss/main.scss */
 .curse {
   font-weight: bold;
   -webkit-filter: blur(1px);
@@ -575,7 +584,7 @@ a.sprite[target="_blank"]:after {
   text-shadow: 0 0 0.25em #ccc, 0 0 0.5em #ccc;
 }
 
-/* line 543, ../scss/main.scss */
+/* line 549, ../scss/main.scss */
 input {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -588,7 +597,7 @@ input {
   border-width: 2px 0px 0px 1px;
 }
 
-/* line 548, ../scss/main.scss */
+/* line 554, ../scss/main.scss */
 textarea {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -601,7 +610,7 @@ textarea {
   border-width: 3px 0px 0px 2px;
 }
 
-/* line 553, ../scss/main.scss */
+/* line 559, ../scss/main.scss */
 input[type="submit"], button {
   padding: 0.5em 1em;
   border-style: solid;
@@ -616,7 +625,7 @@ input[type="submit"], button {
   margin: 0 0 2px 0;
   vertical-align: top;
 }
-/* line 560, ../scss/main.scss */
+/* line 566, ../scss/main.scss */
 input[type="submit"]:focus, button:focus {
   border-style: solid;
   border-color: #dddddd;
@@ -629,29 +638,29 @@ input[type="submit"]:focus, button:focus {
   margin: 2px 0 0 0;
 }
 
-/* line 566, ../scss/main.scss */
+/* line 572, ../scss/main.scss */
 .admin-form {
   display: block;
   clear: both;
 }
-/* line 570, ../scss/main.scss */
+/* line 576, ../scss/main.scss */
 .admin-form input {
   display: block;
 }
 
-/* line 585, ../scss/main.scss */
+/* line 591, ../scss/main.scss */
 .form-labels {
   width: 320px;
   float: left;
   margin: 20px 0;
 }
-/* line 590, ../scss/main.scss */
+/* line 596, ../scss/main.scss */
 .form-labels > div {
   position: relative;
   overflow: hidden;
   margin: 1em 0;
 }
-/* line 597, ../scss/main.scss */
+/* line 603, ../scss/main.scss */
 .form-labels .labels input, .form-labels .labels textarea {
   width: 100%;
   border-style: solid;
@@ -670,7 +679,7 @@ input[type="submit"]:focus, button:focus {
   padding: 12px;
   outline: 0;
 }
-/* line 608, ../scss/main.scss */
+/* line 614, ../scss/main.scss */
 .form-labels .labels input:focus, .form-labels .labels input:valid, .form-labels .labels textarea:focus, .form-labels .labels textarea:valid {
   border-style: solid;
   border-color: #dddddd;
@@ -682,7 +691,7 @@ input[type="submit"]:focus, button:focus {
   border-width: 2px 2px 2px 2px;
   padding: 4px 6px 20px 6px;
 }
-/* line 613, ../scss/main.scss */
+/* line 619, ../scss/main.scss */
 .form-labels .labels input:focus + label, .form-labels .labels input:valid + label, .form-labels .labels textarea:focus + label, .form-labels .labels textarea:valid + label {
   background: url(../images/noiseGreyDark.png) repeat left center #dddddd;
   color: white;
@@ -693,7 +702,7 @@ input[type="submit"]:focus, button:focus {
   top: 100%;
   margin-top: -16px;
 }
-/* line 624, ../scss/main.scss */
+/* line 630, ../scss/main.scss */
 .form-labels .labels input:focus, .form-labels .labels textarea:focus {
   border-style: solid;
   border-color: #25bfff;
@@ -704,11 +713,11 @@ input[type="submit"]:focus, button:focus {
   border-image: url(../images/noiseBlue.png) 2 2 2 2 repeat repeat;
   border-width: 2px 2px 2px 2px;
 }
-/* line 628, ../scss/main.scss */
+/* line 634, ../scss/main.scss */
 .form-labels .labels input:focus + label, .form-labels .labels textarea:focus + label {
   background: url(../images/noiseBlue.png) repeat left center #25bfff;
 }
-/* line 633, ../scss/main.scss */
+/* line 639, ../scss/main.scss */
 .form-labels .labels label {
   transition: background 0.2s, color 0.2s, top 0.2s, bottom 0.2s, right 0.2s, left 0.2s;
   position: absolute;
@@ -720,7 +729,7 @@ input[type="submit"]:focus, button:focus {
   left: 0;
   width: 100%;
 }
-/* line 644, ../scss/main.scss */
+/* line 650, ../scss/main.scss */
 .form-labels .labels textarea {
   display: block;
   resize: vertical;
