--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -654,6 +654,14 @@ input[type="submit"], button {
   }
 }
 
-
+.money {
+  display: inline-block;
+  color: #6e6e6e;
+  font-weight: bold;
+  min-height: 24px;
+  line-height: 24px;
+  padding: 0 0 0 26px;
+  background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAAYBAMAAAAFe7ACAAAAHlBMVEX///9xyP2t1/hxyP1Dwf+t1/hDwf9Dwf+t1/hxyP1gNUrsAAAAB3RSTlMAHh7hHuHhW3sYNAAAADJJREFUeF6lx6ERACAMQ1GuxxLdqiN0i6wQj8q2YDgMLl+9P34FybJ0S2l5mgD6nKXXBtPwJvg3Xs8nAAAAAElFTkSuQmCC') left -1px no-repeat;
+}
 
 
