--- a/media/scss/blog.scss
+++ b/media/scss/blog.scss
@@ -30,6 +30,7 @@
     padding: 1.5em 0;
     //border-bottom: 2px solid #ddd;
     @include noiseBorder(Divider, 2, 0, 0, 0);
+    @include force-wrap;
 
     img {
       max-width: 100%;
